; ModuleID = '/home/carl/AnghaBench/HandBrake/libhb/extr_preset.c_hb_presets_json_package.c'
source_filename = "/home/carl/AnghaBench/HandBrake/libhb/extr_preset.c_hb_presets_json_package.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @hb_presets_json_package(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = call i32* @hb_value_json(i8* %7)
  store i32* %8, i32** %4, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = call i32* @presets_package(i32* %9)
  store i32* %10, i32** %5, align 8
  %11 = load i32*, i32** %5, align 8
  %12 = icmp eq i32* %11, null
  br i1 %12, label %13, label %14

13:                                               ; preds = %1
  store i8* null, i8** %2, align 8
  br label %20

14:                                               ; preds = %1
  %15 = load i32*, i32** %5, align 8
  %16 = call i8* @hb_value_get_json(i32* %15)
  store i8* %16, i8** %6, align 8
  %17 = call i32 @hb_value_free(i32** %5)
  %18 = call i32 @hb_value_free(i32** %4)
  %19 = load i8*, i8** %6, align 8
  store i8* %19, i8** %2, align 8
  br label %20

20:                                               ; preds = %14, %13
  %21 = load i8*, i8** %2, align 8
  ret i8* %21
}

declare dso_local i32* @hb_value_json(i8*) #1

declare dso_local i32* @presets_package(i32*) #1

declare dso_local i8* @hb_value_get_json(i32*) #1

declare dso_local i32 @hb_value_free(i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
